Source/Alternet.UI.Pal/Api/CheckBox.Api.h

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2026 AlterNET Software.</auto-generated>

#pragma once

#include "CheckBox.h"
#include "ApiUtils.h"
#include "Exceptions.h"

using namespace Alternet::UI;

ALTERNET_UI_API CheckBox* CheckBox_Create_()
{
    return MarshalExceptions<CheckBox*>([&](){
        return new CheckBox();
    });
}

ALTERNET_UI_API c_bool CheckBox_GetIsChecked_(CheckBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetIsChecked();
    });
}

ALTERNET_UI_API void CheckBox_SetIsChecked_(CheckBox* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetIsChecked(value);
    });
}

ALTERNET_UI_API int CheckBox_GetCheckState_(CheckBox* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetCheckState();
    });
}

ALTERNET_UI_API void CheckBox_SetCheckState_(CheckBox* obj, int value)
{
    MarshalExceptions<void>([&](){
        obj->SetCheckState(value);
    });
}

ALTERNET_UI_API c_bool CheckBox_GetThreeState_(CheckBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetThreeState();
    });
}

ALTERNET_UI_API void CheckBox_SetThreeState_(CheckBox* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetThreeState(value);
    });
}

ALTERNET_UI_API c_bool CheckBox_GetAlignRight_(CheckBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetAlignRight();
    });
}

ALTERNET_UI_API void CheckBox_SetAlignRight_(CheckBox* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetAlignRight(value);
    });
}

ALTERNET_UI_API c_bool CheckBox_GetAllowAllStatesForUser_(CheckBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetAllowAllStatesForUser();
    });
}

ALTERNET_UI_API void CheckBox_SetAllowAllStatesForUser_(CheckBox* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetAllowAllStatesForUser(value);
    });
}

ALTERNET_UI_API void CheckBox_SetEventCallback_(CheckBox::CheckBoxEventCallbackType callback)
{
    CheckBox::SetEventCallback(callback);
}