Source/Alternet.UI/Native/CheckBox.Generated.cs

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2026 AlterNET Software.</auto-generated>
#nullable enable
#pragma warning disable

using System;
using System.Runtime.InteropServices;
using System.ComponentModel;
using System.Security;
namespace Alternet.UI.Native
{
    internal partial class CheckBox : Control
    {
        static CheckBox()
        {
            SetEventCallback();
        }
        
        public CheckBox()
        {
            SetNativePointer(NativeApi.CheckBox_Create_());
        }
        
        public CheckBox(IntPtr nativePointer) : base(nativePointer)
        {
        }
        
        public bool IsChecked
        {
            get
            {
                CheckDisposed();
                return NativeApi.CheckBox_GetIsChecked_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.CheckBox_SetIsChecked_(NativePointer, value);
            }
        }
        
        public int CheckState
        {
            get
            {
                CheckDisposed();
                return NativeApi.CheckBox_GetCheckState_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.CheckBox_SetCheckState_(NativePointer, value);
            }
        }
        
        public bool ThreeState
        {
            get
            {
                CheckDisposed();
                return NativeApi.CheckBox_GetThreeState_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.CheckBox_SetThreeState_(NativePointer, value);
            }
        }
        
        public bool AlignRight
        {
            get
            {
                CheckDisposed();
                return NativeApi.CheckBox_GetAlignRight_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.CheckBox_SetAlignRight_(NativePointer, value);
            }
        }
        
        public bool AllowAllStatesForUser
        {
            get
            {
                CheckDisposed();
                return NativeApi.CheckBox_GetAllowAllStatesForUser_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.CheckBox_SetAllowAllStatesForUser_(NativePointer, value);
            }
        }
        
        static GCHandle eventCallbackGCHandle;
        public static CheckBox? GlobalObject;
        
        static void SetEventCallback()
        {
            if (!eventCallbackGCHandle.IsAllocated)
            {
                var sink = new NativeApi.CheckBoxEventCallbackType((obj, e, parameter) =>
                    UI.Application.HandleThreadExceptions(() =>
                    {
                        var w = NativeObject.GetFromNativePointer<CheckBox>(obj, p => new CheckBox(p));
                        w ??= GlobalObject;
                        if (w == null) return IntPtr.Zero;
                        return w.OnEvent(e, parameter);
                    }
                    )
                );
                eventCallbackGCHandle = GCHandle.Alloc(sink);
                NativeApi.CheckBox_SetEventCallback_(sink);
            }
        }
        
        IntPtr OnEvent(NativeApi.CheckBoxEvent e, IntPtr parameter)
        {
            OnPlatformEventCheckedChanged(); return IntPtr.Zero;
        }
        
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public delegate IntPtr CheckBoxEventCallbackType(IntPtr obj, CheckBoxEvent e, IntPtr param);
            
            public enum CheckBoxEvent
            {
                CheckedChanged,
            }
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void CheckBox_SetEventCallback_(CheckBoxEventCallbackType callback);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr CheckBox_Create_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool CheckBox_GetIsChecked_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void CheckBox_SetIsChecked_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int CheckBox_GetCheckState_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void CheckBox_SetCheckState_(IntPtr obj, int value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool CheckBox_GetThreeState_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void CheckBox_SetThreeState_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool CheckBox_GetAlignRight_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void CheckBox_SetAlignRight_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool CheckBox_GetAllowAllStatesForUser_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void CheckBox_SetAllowAllStatesForUser_(IntPtr obj, bool value);
            
        }
    }
}
